# cpu_usage_tracker

./: CMakeLists.txt  README.md  a.out  main.c  valgrind-out.txt
usage_tracker/: logger.c  queue.c  tracker.c  wdt.c
usage_tracker/inc/: logger.h  queue.h  tracker.h  wdt.h
